# clawpal

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  agents.md  cc-architecture-refactor-v1.md  cc-ssh-refactor-v1.md  cc.md  design.md  justfile  lefthook.yml  mod-rs-refactor-plan.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: bump-version.yml  ci.yml  coverage.yml  deploy-site.yml  e2e.yml  fork-pr-comment.yml  home-perf-e2e.yml  manual-prerelease-build.yml  metrics.yml  mirror-gitlab.yml  mirror-release.yml  pr-build.yml  recipe-gui-e2e.yml  (+2 more)
clawpal-core/: Cargo.toml
docs/: mvp-checklist.md  recipe-authoring.md  recipe-runner-boundaries.md  release-prerelease-workflow.md
openclaw-gateway-client/: Cargo.toml
openclaw-gateway-client/src/: auth_store.rs  client.rs  error.rs  identity.rs  lib.rs  node.rs  protocol.rs  tls.rs
openclaw-gateway-client/tests/: auth_store.rs  client_handshake.rs  client_rpc.rs  connect_payload.rs  device_identity.rs  node_client.rs  protocol_roundtrip.rs  tls_fingerprint.rs
prompts/: README.md
scripts/: README.md  _common.sh  ci-all.sh  ci-coverage.sh  ci-frontend.sh  ci-metrics.sh  ci-rust.sh  dmg-local-preview.sh  generate-dmg-background.sh  generate_dmg_background.swift  install-hooks.sh  pre-commit  precommit.sh  release.sh  remote-doctor-bootstrap.sh  reset-docker-local-state.sh  verify-dmg-layout.sh
src/: App.tsx  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
(+424 files in other folders)
